creating frontend routes w/ router-dom

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
-  background-color: white;
   text-align: center;
+}
+
+.Canvas {
+  background-color: white;
   width: 800px;
   height: 800px;
 }
