--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,18 @@
   text-align: center;
 }
 
-.Canvas {
+.canvas {
   background-color: white;
   width: 800px;
   height: 800px;
 }
+
+.canvas-show {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+}
+
 
 .App-logo {
   height: 40vmin;
