Testing p5.js and mo.js together, bursts working. Going ahead with creating bursts to chain together for MVP

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,14 @@
   text-align: center;
 }
 
+.canvas-container {
+
+  text-align: center;
+}
+
 .canvas {
   text-align: center;
-  background-color: white;
+  background-color: #222;
   width: 500px;
   height: 500px;
 }
