--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.landing-container {
+  display: grid;
+  grid-template-columns: 1fr 4fr 2fr;
+  grid-template-rows: 1fr 5fr 5fr;
+  grid-template-areas: 
+      "header  header  header"
+      "main    main    main"
+      "about   about   about";
+}
+
 .canvas-container {
 
   text-align: center;
