--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,79 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+li, a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 30px 10%;
+  background-color: #091833;
+  opacity: 0.9;
+}
+
+.nav-links {
+  list-style: none;
+}
+
+.nav-links li {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 0px 20px;
+}
+
+.nav-links li a {
+  transition: all 0.3s ease 0s;
+}
+.nav-links li a:hover {
+  color: #133e7c
+}
+
+.nav-links button {
+  padding: 8px 25px;
+  background-color: rgba(234,0,217,1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  font-size: 70px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.banner-img {
+  background-image: url('dance-floor.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
 
-.landing-container {
-  display: grid;
-  grid-template-columns: 1fr 4fr 2fr;
-  grid-template-rows: 1fr 5fr 5fr;
-  grid-template-areas: 
-      "header  header  header"
-      "main    main    main"
-      "about   about   about";
-}
-
 .canvas-container {
-
   text-align: center;
 }
 
