Added triangles and lines to the p5shapes adapter

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ header {
   align-items: center;
   padding: 30px 10%;
   background-color: #091833;
-  opacity: 0.9;
+  /* opacity: 0.9; */
 }
 
 .nav-links {
@@ -67,6 +67,7 @@ h1 {
   background-size: cover;
   position: relative;
   height: 100%;
+  box-shadow: 0 0 8px 8px #091833 inset;
 }
 
 .App {
@@ -90,37 +91,3 @@ h1 {
   width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
