--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,6 @@ h1 {
   background-size: cover;
   position: relative;
   height: 100%;
-  box-shadow: 0 0 8px 8px #091833 inset;
 }
 
 .App {
@@ -91,3 +90,6 @@ h1 {
   width: 100%;
 }
 
+.color-slider {
+  width: 300px;
+}
