--- a/src/App.css
+++ b/src/App.css
@@ -60,17 +60,25 @@ h1 {
   margin: 0;
 }
 
+.App {
+  text-align: center;
+}
+
 .banner-img {
   background-image: url('dance-floor.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  height: 100%;
+  height: 1000px;
 }
 
-.App {
+.banner-text {
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .canvas-show {
@@ -94,4 +102,20 @@ h1 {
 .tools-container {
   height: 625px;
   overflow: scroll;
+}
+
+.tool {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 10px;
+}
+
+.toolbox1, .toolbox2, .toolbox3, .toolbox4 {
+  height: 150px;
+  padding: 10px;
+}
+
+.toolbox4 {
+  display: flex;
 }
