--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ h1 {
 }
 
 .canvas-show {
-  /* background-color: black; */
+  background-color: rgb(9,24,50);
   height: 100%;
   width: 100%;
   padding: 30px;
