--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@ h1 {
   max-height: 500px;
 }
 
+th {
+  text-align: left;
+}
+
 .user-canvases-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
