--- a/src/containers/styles/CreatedCanvasesContainer.scss
+++ b/src/containers/styles/CreatedCanvasesContainer.scss
@@ -1,6 +1,7 @@
 .canvas-table {
   width: 100%;
   overflow-x: auto;
+  padding: 1em 0;
 
     ul {
       display: flex;
@@ -15,6 +16,7 @@
           padding: .75em 1em;
           border-radius: .5em;
           border: none;
+          cursor: pointer;
         }
       }
     }
