--- a/src/components/styles/NavBar.scss
+++ b/src/components/styles/NavBar.scss
@@ -21,6 +21,10 @@ li {
     display: inline-block;
     margin-top: 12px;
     padding: 0px 20px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #ffffff;
+    text-decoration: none;
     a {
         transition: all 0.3s ease 0s;
     }
@@ -30,5 +34,12 @@ li {
     }
 }
 }
+
+// li, a {
+//     font-weight: 500;
+//     font-size: 16px;
+//     color: #000000;
+//     text-decoration: none;
+//   }
 
   
