Adding styling to everything

--- a/src/components/styles/NavBar.scss
+++ b/src/components/styles/NavBar.scss
@@ -5,6 +5,9 @@ header {
     align-items: center;
     padding: 30px 10%;
     background-color: #091833;
+    svg {
+        height: 100%;
+    }
   }
   img {
       width: 200px;
