--- a/src/components/styles/NavBar.scss
+++ b/src/components/styles/NavBar.scss
@@ -3,8 +3,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
-    background-color: #091833;
+    // padding: 30px 10%;
     svg {
         height: 100%;
     }
@@ -29,7 +28,6 @@ li {
     padding: 0px 20px;
     font-weight: 500;
     font-size: 16px;
-    color: #ffffff;
     text-decoration: none;
     a {
         transition: all 0.3s ease 0s;
