--- a/src/components/styles/NavBar.scss
+++ b/src/components/styles/NavBar.scss
@@ -3,38 +3,45 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // padding: 30px 10%;
+    padding: 1em;
     svg {
-        height: 100%;
+        height: 2em;
     }
-  }
-  img {
-      width: 200px;
-  }
-  
-.nav-links {
-    list-style: none;
-    button {
-        padding: 8px 25px;
-        background-color: rgba(234,0,217,1);
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
+    ul {
+        list-style: none;
+        li {
+            display: inline-block;
+            margin-right: 4em;
+            font-weight: 500;
+            text-decoration: none;
+            a {
+                color: white;
+                text-decoration: none;
+            }
+
+            button {
+                color: white;
+                background: none;
+                border: none;
+                font-size: 1em;
+                font-family: "Futura", sans-serif;
+                cursor: pointer;
+            }
+
+            a, button {
+                transition: all 0.3s ease 0s;
+            }
+            
+            a:hover, button:hover {
+                color: #133e7c
+            }
+        }
+    }
 }
 
-li {
-    display: inline-block;
-    margin-top: 12px;
-    padding: 0px 20px;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-    a {
-        transition: all 0.3s ease 0s;
-    }
+@media (min-width: 800px) {
+
     
-    a:hover {
-        color: #133e7c
-    }
 }
-}
+
+
