--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,5 +1,6 @@
-$main-color: #002A3E;
-$main-offset: #012436;
+// $main-color: #002A3E;
+$main-color: #012436;
+$main-offset: #002A3E;
 $accent-one: #01BDC6;
 $accent-two: #FF2079;
 $text: #ffffff;
