onto user page, still form styling left for index page

--- a/src/containers/CanvasesContainer/CanvasesContainer.scss
+++ b/src/containers/CanvasesContainer/CanvasesContainer.scss
@@ -9,4 +9,10 @@
             margin-right: 2em;
         }
     }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+    }
 }
