--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,16 @@ a {
   text-transform: uppercase;
 }
 
+.btn-secondary {
+  cursor: pointer;
+  background: $accent-one;
+  border: none;
+  border-radius: .5em;
+  color: $text;
+  padding: 1em 3em;
+  text-transform: uppercase;
+}
+
 .seen {
   display: none;
 }
