Onto login page

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -39,8 +39,13 @@ header {
 }
 
 @media (min-width: 800px) {
-    li {
-        margin-right: 5em;
+    header {
+        li {
+            margin-right: 5em;
+        }
+    }
+    .menu-btn {
+        display: none;
     }
 
 }
