--- a/src/containers/CanvasesContainer/CanvasesContainer.scss
+++ b/src/containers/CanvasesContainer/CanvasesContainer.scss
@@ -11,8 +11,7 @@
     }
 
     form {
-        display: flex;
-        flex-direction: column;
         width: 50%;
+        margin-bottom: 2em;
     }
 }
