--- a/src/components/presentational/CanvasImg.scss
+++ b/src/components/presentational/CanvasImg.scss
@@ -1,5 +1,5 @@
 @import "../../constants/colors.scss";
-.canvas-container {
+.canvas-img-container {
     overflow: hidden;
     border: solid 1px $accent-one;
 }
