--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -2,6 +2,10 @@
 
 .login-container {
     display: flex;
+    p {
+        color: red;
+        margin-top: 1em;
+    }
     .form-container {
         margin: 2em auto;
         min-width: 600px;
