--- a/src/containers/CanvasTools/CanvasTools.scss
+++ b/src/containers/CanvasTools/CanvasTools.scss
@@ -1,10 +1,16 @@
+.tools-selector {
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+  top: -.5em;
+
+  button {
+    border: none;
+    padding: .5em 1em;
+  }
+}
 .tools-container {
-    margin-left: 20px;
-    margin-top: 10px;
-    height: 625px;
-    width: 630px;
     overflow-y: auto;
-    box-shadow: 0px 50px 100px 0px rgba(9,24,50, 0.25);
   }
   
   .tool {
@@ -13,24 +19,9 @@
     grid-template-rows: 1fr 1fr;
     padding: 10px;
   }
-  
-  .tool-burst {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    padding: 10px;
-  }
-  
+
   .canvas-settings {
     padding: 15px;
-  }
-  
-  .burst1, .burst2 {
-    height: 150px;
-    padding: 10px;
-  }
-  
-  .burst2 {
-    display: flex;
   }
   
   .toolbox1, .toolbox2, .toolbox3, .toolbox4 {
