--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -12,6 +12,7 @@
         padding: 2em;
         border-radius: .5em;
         background: $main-offset;
+        box-shadow: 10px 10px 10px rgba(0,0,0,0.2);
 
         .toggle {
             background: none;
