--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,6 +1,6 @@
-// $main-color: #002A3E;
 $main-color: #012436;
 $main-offset: #002A3E;
+$main-lighter: #003750;
 $accent-one: #01BDC6;
 $accent-two: #FF2079;
 $text: #ffffff;
