--- a/src/containers/SongsContainer/SongsContainer.scss
+++ b/src/containers/SongsContainer/SongsContainer.scss
@@ -1,8 +1,19 @@
 .song-container {
+    display: flex;
+
+    .left {
+        height: 100%;
+        border-right: 1px solid white;
+    }
+
+    .right {
+        height: 100%;
+    }
+
     ul {
         list-style: none;
         li {
-            color: black;
+            color: white
         }
     
         li:hover {
