--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,3 +1,4 @@
+@import "../../constants/colors.scss";
 
 header {
     display: flex;
@@ -16,17 +17,20 @@ header {
         cursor: pointer;
     }
     .nav-links {
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
+        position: absolute;
+        top: 68px;
+        right: 0;
+        text-align: right;
+        background: $main-offset;
+        border-radius: .5em;
+        padding: 1em;
+
         ul {
             list-style: none;
-            position: relative;
-            z-index: 1;
+            display: flex;
+            flex-direction: column;
             li {
-                display: block;
+                display: inline-block;
                 margin-right: 4em;
                 font-weight: 500;
                 text-decoration: none;
@@ -34,30 +38,33 @@ header {
                     color: white;
                     text-decoration: none;
                 }
-    
                 a, button {
                     transition: all 0.3s ease 0s;
                 }
-                
                 a:hover, button:hover {
                     color: #133e7c
                 }
             }
         }
     }
-    .menu-btn {
-        cursor: pointer;
-        width: 2em;
-    }
-
 }
+.menu-btn {
+    cursor: pointer;
+    width: 2em;
+}
+.closed {
+    display: none;
+}
+
 
 @media (min-width: 900px) {
     header {
+
         .nav-links {
-            // z-index: 1;
+            position: static;
+            background: none;
             ul {
-                position: static;
+                display: block;
                 li {
                     margin-right: 4em;
                     display: inline-block;
@@ -68,11 +75,7 @@ header {
     .menu-btn {
         display: none;
     }
-
     .closed {
-        display: inherit;
+        display: unset;
     }
-
 }
-
-
