--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,11 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+}
+
 .btn-primary {
   cursor: pointer;
   background: $accent-two;
