Creating brush settings now

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -31,7 +31,7 @@ header {
             flex-direction: column;
             li {
                 display: inline-block;
-                margin-right: 4em;
+                margin-bottom: 1em;
                 font-weight: 500;
                 text-decoration: none;
                 a {
