--- a/src/containers/CanvasShowContainer/CanvasShowContainer.scss
+++ b/src/containers/CanvasShowContainer/CanvasShowContainer.scss
@@ -3,7 +3,8 @@
 .canvas-container {
     padding: 1em;
     .tools {
-        background-color: $main-lighter;
+        background-color: $text;
+        color: black;
     }
 
     .songs {
