--- a/src/containers/CanvasShowContainer/CanvasShowContainer.scss
+++ b/src/containers/CanvasShowContainer/CanvasShowContainer.scss
@@ -5,11 +5,13 @@
     .tools {
         background-color: $text;
         color: black;
+        height: 100%;
     }
 
     .songs {
         background: $main-lighter;
     }
+
     .curved {
         border-radius: .25em;
         box-shadow: 0px 10px 10px rbga(0,0,0,.3);
@@ -26,9 +28,9 @@
         grid-template-rows: 1fr 1fr .5fr;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: .75em;
+        height: 90%;
     
         .tools {
-            display: unset;
             grid-area: tools;
         }
     
