--- a/src/containers/CanvasTools/CanvasTools.scss
+++ b/src/containers/CanvasTools/CanvasTools.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-evenly;
   position: relative;
-  top: -.5em;
 
   button {
     border: none;
@@ -10,6 +9,7 @@
   }
 }
 .tools-container {
+  height: 90%;
   overflow-y: auto;
   padding: 1em;
 }
