--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -9,10 +9,9 @@
   justify-content: space-evenly;
   height: 2em;
   margin-top: .5em;
-  .upload-btn, .clear-btn {
+  .clear-btn {
     font-size: .5em;
   }
-
   .play-btn {
     position: relative;
     top: -2em;
@@ -22,8 +21,4 @@
     border: none;
     cursor: pointer;
   }
-}
-
-.p5-upload {
-  display: none;
 }
